Archive2/81/2c7fb4f540bfea/output
main.cpp:8:36: error: expected ')'
void function(const StringContainer<std::string>& cont);
                                   ^
main.cpp:8:14: note: to match this '('
void function(const StringContainer<std::string>& cont);
             ^
1 error generated.
